fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-197-026402bf2e.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function FlexWithMaxW() {
  return (
    <VStack
      alignItems="center"
      bg="#FFF"
      overflow="hidden"
      px="30px"
      py="80px"
    >
      <Center flexDir="column" gap="50px" maxW="1280px" w="100%">
        <Text
          color="#000"
          fontFamily="Inter"
          fontSize="40px"
          fontWeight="400"
          letterSpacing="0em"
          lineHeight="normal"
        >
          Hello World!
        </Text>
        <Image h="500px" src="/images/image.png" w="100%" />
      </Center>
    </VStack>
  )
}"
