fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-207-b0e134acf4.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function TextWithAutoLayout() {
  return (
    <VStack
      alignItems="center"
      gap="10px"
      justifyContent="flex-end"
      px="20px"
      py="10px"
    >
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="12px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="normal"
      >
        Hello World
      </Text>
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="12px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="normal"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </Text>
    </VStack>
  )
}"
