fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-208-1a343e45db.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function TextWithAutoLayout() {
  return (
    <VStack gap="10px" justifyContent="center" px="20px" py="10px">
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="12px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="normal"
        textAlign="center"
      >
        Hello World
      </Text>
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="12px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="normal"
        textAlign="center"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </Text>
    </VStack>
  )
}"
